cardfree/cardfreepage/pods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cardfree
  labels:
    app: cardfree
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cardfree
  template:
    metadata:
      labels:
        app: cardfree
    spec:
      containers:
      - name: cardfree
        image: eldergod23/cardfree:3
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "100M"
            cpu: "100m"
          limits:
            memory: "200M"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 20
