cardfree/cardfreepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cardfree
spec:
  type: LoadBalancer
  selector:
    app: cardfree
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
