cardfree/cardfreepage/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cardfree
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: cardfree
              servicePort: 8080
